# Rag-Projects

./: README.md
R1-Text-Rag/: README.md  main.py  pyproject.toml  requirements.txt
R1-Text-Rag/app/api/: router.py
R1-Text-Rag/app/core/: config.py
R1-Text-Rag/app/data/: sample.txt
R1-Text-Rag/app/rag/: embedder.py  loader.py  splitter.py  vector_db.py
R1-Text-Rag/app/rag/chroma_db/: chroma.sqlite3
R1-Text-Rag/app/rag/retreival_workflow/: rag_graph.py  rag_state.py
R2-PDF-Rag/: .gitignore  LEARNING_PLAN.md  README.md  pyproject.toml  requirements.txt
R2-PDF-Rag/app/: main.py
R2-PDF-Rag/app/api/: rag_router.py
R2-PDF-Rag/app/core/: config.py
R2-PDF-Rag/app/rag/ingestion_pipeline/: embedder.py  ingestion.py
R2-PDF-Rag/app/rag/retrieval_pipeline/: retriever.py
R2-PDF-Rag/app/vector_db/: qdrant_vector_db.py
R3-Company-Knowledge-Rag-Bot/: .gitignore  README.md  main.py  pyproject.toml  requirement.txt
R3-Company-Knowledge-Rag-Bot/app/: main.py
R3-Company-Knowledge-Rag-Bot/app/api/: rag_router.py
R3-Company-Knowledge-Rag-Bot/app/core/: config.py
R3-Company-Knowledge-Rag-Bot/app/ingestion/: ingester.py
R3-Company-Knowledge-Rag-Bot/app/retriever/: retriever.py
R3-Company-Knowledge-Rag-Bot/app/vector_db/: qdrant.py
