[project]
name = "r3-company-knowledge-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
